[package]
name = "cleanfetchrmcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
dotenvy = "0.15"
fantoccini = "0.21"
futures = "0.3"
rmcp = { version = "0.14.0", features = ["server", "macros", "transport-streamable-http-server", "schemars"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
